Formulario de contacto

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -73,12 +73,12 @@ const { title, description, meta_title, image, address_section } = contact.data;
               />
             </div>
             <div class="mb-6">
-              <label for="subject" class="form-label">
-                Asunto de Consulta <span class="text-red-500">*</span>
+              <label for="phone" class="form-label">
+                Teléfono <span class="text-red-500">*</span>
               </label>
               <input
-                id="subject"
-                name="subject"
+                id="phone"
+                name="phone"
                 class="form-input"
                 placeholder="Consulta por alquiler de consultorio"
                 type="text"
