--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -80,8 +80,8 @@ const { title, description, meta_title, image, address_section } = contact.data;
                 id="phone"
                 name="phone"
                 class="form-input"
-                placeholder="Consulta por alquiler de consultorio"
-                type="text"
+                placeholder="Ingresá tu teléfono"
+                type="tel"
               />
             </div>
             <div class="mb-6">
