--- a/src/styles/safe.css
+++ b/src/styles/safe.css
@@ -13,7 +13,7 @@ input#nav-toggle:checked ~ #nav-menu {
 
 /* form style */
 .form-input {
-  @apply w-full rounded-none border border-white/20 bg-transparent p-4 text-text transition placeholder:text-white placeholder:opacity-40 focus:border-white focus:ring-white focus:ring-0;
+  @apply w-full rounded-none border border-white/20 bg-transparent p-4 text-white transition placeholder:text-white placeholder:opacity-40 focus:border-white focus:ring-white focus:ring-0;
 
   &:focus {
     @apply shadow-transparent! outline-transparent! ring-transparent!;
